--- a/ipynb/gem22.ipynb
+++ b/ipynb/gem22.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "'21-11-2023_09-28'"
+       "'21-11-2023_21-03'"
       ]
      },
      "execution_count": 2,
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "id": "16df95d4",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
        "<module 'module_prgem.price_em' from 'C:\\\\Users\\\\diva0\\\\work\\\\KDM2023\\\\gems\\\\ipynb\\\\module_prgem\\\\price_em.py'>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "d270aed4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'module_prgem.price_sap_ruby' from 'C:\\\\Users\\\\diva0\\\\work\\\\KDM2023\\\\gems\\\\ipynb\\\\module_prgem\\\\price_sap_ruby.py'>"
+       "<module 'module_prgem.price_sap_ruby2' from 'C:\\\\Users\\\\diva0\\\\work\\\\KDM2023\\\\gems\\\\ipynb\\\\module_prgem\\\\price_sap_ruby2.py'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "60d50274",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "de96a608",
    "metadata": {
     "scrolled": true
@@ -138,10 +138,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'module_prgem.dictgems' from 'C:\\\\Users\\\\специалист ао\\\\mypandas\\\\work\\\\2023\\\\gems\\\\ipynb\\\\module_prgem\\\\dictgems.py'>"
+       "<module 'module_prgem.dictgems' from 'C:\\\\Users\\\\diva0\\\\work\\\\KDM2023\\\\gems\\\\ipynb\\\\module_prgem\\\\dictgems.py'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d88a78d7",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        " 'рубинпф': 'рубинпф'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7fa900be",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        " 5: '5'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d9d1016e",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        " ('3', 'ИзумрудПМ', '1,500', 'НРОГ', '3/Г3')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 13,
    "id": "54bbefda",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "'217.50; 0.25+1.5; price:150+120;size:до 0,09+0,50-0,74;gem:изумрудпм+изумрудпм'"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "9a08b125",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "ab6fc442",
    "metadata": {
     "scrolled": true
@@ -294,7 +294,7 @@
        " 'ok:3!=3;C:ok;Q:ok;PCS:ok;GEM:ok;')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "b62f941e",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        " 'ok:3!=3;C:ok;Q:ok;PCS:ok;GEM:ok;')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "6b98f23e",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "'2,00-2,99'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "ef7f1368",
    "metadata": {},
    "outputs": [
@@ -358,19 +358,22 @@
      "data": {
       "text/plain": [
        "['2023-11-17',\n",
-       " '3_1_ЮИ_добивка_01_СВЕЖИЕ_ПРАВКИ_ЦВДК.xlsx',\n",
        " 'df_gems.xlsx',\n",
        " 'df_vst_15102023.xlsx',\n",
+       " 'pr_emeralds_173_20-04-2023.xlsx',\n",
        " 'test_re01.xlsx',\n",
        " 'test_re03_модуль.xlsx',\n",
        " 'test_resapphire.xlsx',\n",
        " 'test_res_rubyjruby.xlsx',\n",
        " '~$pr_emeralds_173_20-04-2023.xlsx',\n",
+       " 'выгрузка17_11_2023_все_склады_ДК_17_11_2023_08_01_res_pr.xlsx',\n",
+       " 'плохое распознавание сапфир54-01-05-2019.xlsx',\n",
        " 'пром_рез_изумр_проверка_по.xlsx',\n",
+       " 'сапфир54-01-05-2019.pdf',\n",
        " 'ТестЦВДК.xlsx']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,34 +406,19 @@
    "outputs": [],
    "source": [
     "#из дома через врем файл\n",
-    "#df0 = pd.read_excel('../ЦВДК/выгрузка17_11_2023_все_склады_ДК_17_11_2023_08_01_res_pr.xlsx')\n",
+    "df0 = pd.read_excel('../ЦВДК/выгрузка17_11_2023_все_склады_ДК_17_11_2023_08_01_res_pr.xlsx')\n",
     "#из офиса \n",
     "#C:\\Users\\специалист ао\\mypandas\\work\\2023\\23-09-ХХ Переоценка ДК магазины выст\\for_script2023-11-16\\выгрузка17-11-2023_все_склады_ДК__17-11-2023_08-01_res_pr.xlsx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "ab6e0cea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['выгрузка17-11-2023_все_склады_ДК_17-11-2023_07-47.xlsx',\n",
-       " 'выгрузка17-11-2023_все_склады_ДК__17-11-2023_07-57_diamonds.xlsx',\n",
-       " 'выгрузка17-11-2023_все_склады_ДК__17-11-2023_08-01_res_pr.xlsx',\n",
-       " 'не хватающие 10 шк в свод от 16-11-23.xlsx',\n",
-       " 'проверить, почему не равно прейс стоим.xlsx']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.listdir('../../23-09-ХХ Переоценка ДК магазины выст/for_script2023-11-16')"
+    "#os.listdir('../../23-09-ХХ Переоценка ДК магазины выст/for_script2023-11-16')"
    ]
   },
   {
@@ -440,12 +428,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df0 = pd.read_excel('../../23-09-ХХ Переоценка ДК магазины выст/for_script2023-11-16/выгрузка17-11-2023_все_склады_ДК__17-11-2023_08-01_res_pr.xlsx')"
+    "#df0 = pd.read_excel('../../23-09-ХХ Переоценка ДК магазины выст/for_script2023-11-16/выгрузка17-11-2023_все_склады_ДК__17-11-2023_08-01_res_pr.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "b2ffbf53",
    "metadata": {},
    "outputs": [
@@ -482,7 +470,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "c546d7e9",
    "metadata": {},
    "outputs": [
@@ -600,7 +588,7 @@
        "[34509 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "id": "dd63444b",
    "metadata": {},
    "outputs": [],
@@ -630,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 27,
    "id": "abebe39f",
    "metadata": {},
    "outputs": [],
@@ -1673,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 28,
    "id": "bfe26a9a",
    "metadata": {},
    "outputs": [],
@@ -2321,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 29,
    "id": "29d783bb",
    "metadata": {},
    "outputs": [],
@@ -2336,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 30,
    "id": "18c33329",
    "metadata": {},
    "outputs": [
@@ -2555,7 +2543,7 @@
        "[425 rows x 7 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2582,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 31,
    "id": "15292743",
    "metadata": {},
    "outputs": [],
@@ -3202,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 32,
    "id": "6ed3a62f",
    "metadata": {},
    "outputs": [],
@@ -3227,7 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 33,
    "id": "1bdec321",
    "metadata": {},
    "outputs": [
@@ -3265,8 +3253,8 @@
        "      <th>count_price_ruby20</th>\n",
        "      <th>prruby_cost</th>\n",
        "      <th>make_list_em20</th>\n",
-       "      <th>report_em20</th>\n",
        "      <th>list_std_em20</th>\n",
+       "      <th>report_em20</th>\n",
        "      <th>prem_vst2list</th>\n",
        "      <th>count_price_em20</th>\n",
        "      <th>prem_cost</th>\n",
@@ -3288,8 +3276,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3309,8 +3297,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3330,8 +3318,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3351,8 +3339,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3372,8 +3360,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3414,8 +3402,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3435,8 +3423,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3456,8 +3444,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3477,8 +3465,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3498,8 +3486,8 @@
        "      <td>[]</td>\n",
        "      <td>0</td>\n",
        "      <td>([], нет распознанных)</td>\n",
-       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
+       "      <td>нет распознанных</td>\n",
        "      <td>[]</td>\n",
        "      <td>[]</td>\n",
        "      <td>0.0</td>\n",
@@ -3575,18 +3563,18 @@
        "34507  ok:0!=0;нет распознанных                 []           0   \n",
        "34508  ok:0!=0;нет распознанных                 []           0   \n",
        "\n",
-       "               make_list_em20       report_em20 list_std_em20 prem_vst2list  \\\n",
-       "0      ([], нет распознанных)  нет распознанных            []            []   \n",
-       "1      ([], нет распознанных)  нет распознанных            []            []   \n",
-       "2      ([], нет распознанных)  нет распознанных            []            []   \n",
-       "3      ([], нет распознанных)  нет распознанных            []            []   \n",
-       "4      ([], нет распознанных)  нет распознанных            []            []   \n",
-       "...                       ...               ...           ...           ...   \n",
-       "34504  ([], нет распознанных)  нет распознанных            []            []   \n",
-       "34505  ([], нет распознанных)  нет распознанных            []            []   \n",
-       "34506  ([], нет распознанных)  нет распознанных            []            []   \n",
-       "34507  ([], нет распознанных)  нет распознанных            []            []   \n",
-       "34508  ([], нет распознанных)  нет распознанных            []            []   \n",
+       "               make_list_em20 list_std_em20       report_em20 prem_vst2list  \\\n",
+       "0      ([], нет распознанных)            []  нет распознанных            []   \n",
+       "1      ([], нет распознанных)            []  нет распознанных            []   \n",
+       "2      ([], нет распознанных)            []  нет распознанных            []   \n",
+       "3      ([], нет распознанных)            []  нет распознанных            []   \n",
+       "4      ([], нет распознанных)            []  нет распознанных            []   \n",
+       "...                       ...           ...               ...           ...   \n",
+       "34504  ([], нет распознанных)            []  нет распознанных            []   \n",
+       "34505  ([], нет распознанных)            []  нет распознанных            []   \n",
+       "34506  ([], нет распознанных)            []  нет распознанных            []   \n",
+       "34507  ([], нет распознанных)            []  нет распознанных            []   \n",
+       "34508  ([], нет распознанных)            []  нет распознанных            []   \n",
        "\n",
        "      count_price_em20  prem_cost  \n",
        "0                   []        0.0  \n",
@@ -3604,7 +3592,7 @@
        "[34509 rows x 18 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3623,7 +3611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "02a09ccf",
    "metadata": {},
    "outputs": [],
@@ -3633,7 +3621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 35,
    "id": "128ae317",
    "metadata": {},
    "outputs": [],
@@ -4178,7 +4166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 36,
    "id": "d88aac77",
    "metadata": {},
    "outputs": [
@@ -4188,12 +4176,12 @@
        "Index(['Код', 'vst', 'make_list_sap_20', 'list_std_sap20', 'report_sap20',\n",
        "       'count_price_sap20', 'prsap_cost', 'make_list_ruby20',\n",
        "       'list_std_ruby20', 'report_ruby20', 'count_price_ruby20', 'prruby_cost',\n",
-       "       'make_list_em20', 'report_em20', 'list_std_em20', 'prem_vst2list',\n",
+       "       'make_list_em20', 'list_std_em20', 'report_em20', 'prem_vst2list',\n",
        "       'count_price_em20', 'prem_cost'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4204,7 +4192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 37,
    "id": "e78360d6",
    "metadata": {
     "scrolled": true
@@ -4219,7 +4207,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4230,7 +4218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 38,
    "id": "93f79721",
    "metadata": {},
    "outputs": [
@@ -4240,7 +4228,7 @@
        "nan"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17793,7 +17781,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -17807,7 +17795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
