before to sum count_price

--- a/ipynb/gem22.ipynb
+++ b/ipynb/gem22.ipynb
@@ -769,14 +769,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6942995b",
+   "id": "69393149",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2bc0a455",
+   "id": "92210223",
    "metadata": {},
    "source": [
     "## для записи в файл .py"
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "026100d6",
+   "id": "7bb250f5",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b75a2f81",
+   "id": "8f175cf5",
    "metadata": {},
    "source": [
     "## Проверка файла"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dada59bc",
+   "id": "dcd69b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b497f16",
+   "id": "b067a956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b4927f4",
+   "id": "5eb15dca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e35bdb2",
+   "id": "c78d4bcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a9b047c",
+   "id": "cf6b87c6",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89ef3133",
+   "id": "8f192fa5",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "629bc7aa",
+   "id": "cb32364c",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fbb1d4a0",
+   "id": "e13247dc",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9d579c24",
+   "id": "9d2d1e8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3eec4df9",
+   "id": "32b7d04d",
    "metadata": {
     "scrolled": true
    },
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ef946a21",
+   "id": "2bdce1dc",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5ae1ca08",
+   "id": "afd244fd",
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1934,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f877ec49",
+   "id": "b9f22531",
    "metadata": {},
    "outputs": [
     {
@@ -1953,8 +1953,250 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "96728854",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Код</th>\n",
+       "      <th>vst</th>\n",
+       "      <th>list_sum</th>\n",
+       "      <th>report_sum</th>\n",
+       "      <th>sum_pr2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>ЦБ-00001991</td>\n",
+       "      <td>1сапфирПТ-0,450-КВ+2/2 2кр57-0,02-2/3А</td>\n",
+       "      <td>[[1, сапфирпт, 0,450, кв, 2, 2, nan]]</td>\n",
+       "      <td>r:ok:0!=0;нет распознанных; s:ok:1!=1;C:ok;Q:o...</td>\n",
+       "      <td>51.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>ЦБ-00002028</td>\n",
+       "      <td>4изумрудПМ-0,100-НРООв+3/Г2 12кр57-0,19-2/2А</td>\n",
+       "      <td>[[4, изумрудпм, 0,100, нроов, 3, Г2, nan]]</td>\n",
+       "      <td>r:ok:0!=0;нет распознанных; s:ok:0!=0;нет расп...</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>ЦБ-00002032</td>\n",
+       "      <td>1РубинПТ-0,230-ОВ+2/2</td>\n",
+       "      <td>[[1, рубинпт, 0,230, ов, 2, 2, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>35.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>ЦБ-00002033</td>\n",
+       "      <td>1рубинПТ-0,770-ОВ+2/2 18кр57-0,37-3/4А</td>\n",
+       "      <td>[[1, рубинпт, 0,770, ов, 2, 2, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>308.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>ЦБ-00002875</td>\n",
+       "      <td>1ИзумрудПМ-1,490-Багет+4/Г2 6Кр57-0,07-3/3А</td>\n",
+       "      <td>[[1, изумрудпм, 1,490, багет, 4, Г2, nan]]</td>\n",
+       "      <td>r:ok:0!=0;нет распознанных; s:ok:0!=0;нет расп...</td>\n",
+       "      <td>178.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29577</th>\n",
+       "      <td>ЦБ-00189700</td>\n",
+       "      <td>1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А</td>\n",
+       "      <td>[[1, рубинпт, 0,610, ов, 3, 2, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>195.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29606</th>\n",
+       "      <td>ЦБ-00189729</td>\n",
+       "      <td>1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А</td>\n",
+       "      <td>[[1, рубинпт, 0,610, ов, 3, 2, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>195.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29663</th>\n",
+       "      <td>ЦБ-00189787</td>\n",
+       "      <td>1РубинПТ-0,610-ов+3/4 10КР57-0,139-6/6А</td>\n",
+       "      <td>[[1, рубинпт, 0,610, ов, 3, 4, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>109.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29717</th>\n",
+       "      <td>ЦБ-00189841</td>\n",
+       "      <td>1РубинПТ-0,610-ов+3/4 10КР57-0,138-6/6А</td>\n",
+       "      <td>[[1, рубинпт, 0,610, ов, 3, 4, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>109.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29720</th>\n",
+       "      <td>ЦБ-00189844</td>\n",
+       "      <td>1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А</td>\n",
+       "      <td>[[1, рубинпт, 0,610, ов, 3, 2, nan]]</td>\n",
+       "      <td>r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...</td>\n",
+       "      <td>195.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>927 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Код                                           vst  \\\n",
+       "203    ЦБ-00001991        1сапфирПТ-0,450-КВ+2/2 2кр57-0,02-2/3А   \n",
+       "218    ЦБ-00002028  4изумрудПМ-0,100-НРООв+3/Г2 12кр57-0,19-2/2А   \n",
+       "220    ЦБ-00002032                         1РубинПТ-0,230-ОВ+2/2   \n",
+       "221    ЦБ-00002033        1рубинПТ-0,770-ОВ+2/2 18кр57-0,37-3/4А   \n",
+       "368    ЦБ-00002875   1ИзумрудПМ-1,490-Багет+4/Г2 6Кр57-0,07-3/3А   \n",
+       "...            ...                                           ...   \n",
+       "29577  ЦБ-00189700       1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А   \n",
+       "29606  ЦБ-00189729       1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А   \n",
+       "29663  ЦБ-00189787       1РубинПТ-0,610-ов+3/4 10КР57-0,139-6/6А   \n",
+       "29717  ЦБ-00189841       1РубинПТ-0,610-ов+3/4 10КР57-0,138-6/6А   \n",
+       "29720  ЦБ-00189844       1РубинПТ-0,610-ов+3/2 10КР57-0,138-6/6А   \n",
+       "\n",
+       "                                         list_sum  \\\n",
+       "203         [[1, сапфирпт, 0,450, кв, 2, 2, nan]]   \n",
+       "218    [[4, изумрудпм, 0,100, нроов, 3, Г2, nan]]   \n",
+       "220          [[1, рубинпт, 0,230, ов, 2, 2, nan]]   \n",
+       "221          [[1, рубинпт, 0,770, ов, 2, 2, nan]]   \n",
+       "368    [[1, изумрудпм, 1,490, багет, 4, Г2, nan]]   \n",
+       "...                                           ...   \n",
+       "29577        [[1, рубинпт, 0,610, ов, 3, 2, nan]]   \n",
+       "29606        [[1, рубинпт, 0,610, ов, 3, 2, nan]]   \n",
+       "29663        [[1, рубинпт, 0,610, ов, 3, 4, nan]]   \n",
+       "29717        [[1, рубинпт, 0,610, ов, 3, 4, nan]]   \n",
+       "29720        [[1, рубинпт, 0,610, ов, 3, 2, nan]]   \n",
+       "\n",
+       "                                              report_sum sum_pr2  \n",
+       "203    r:ok:0!=0;нет распознанных; s:ok:1!=1;C:ok;Q:o...   51.75  \n",
+       "218    r:ok:0!=0;нет распознанных; s:ok:0!=0;нет расп...     9.0  \n",
+       "220    r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   35.65  \n",
+       "221    r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   308.0  \n",
+       "368    r:ok:0!=0;нет распознанных; s:ok:0!=0;нет расп...   178.8  \n",
+       "...                                                  ...     ...  \n",
+       "29577  r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   195.2  \n",
+       "29606  r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   195.2  \n",
+       "29663  r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   109.8  \n",
+       "29717  r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   109.8  \n",
+       "29720  r:ok:1!=1;C:ok;Q:ok;PCS:ok;GEM:ok;; s:ok:0!=0;...   195.2  \n",
+       "\n",
+       "[927 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.sum_pr2.apply(lambda x: x!= 0),:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4a1d20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d88d8bc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "3888c9c4",
+   "id": "46c4dcc1",
+   "metadata": {},
+   "source": [
+    "### Запись в файл"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "33c9c4eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_res = '../ЦВДК/2023-11-22 res total/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dbfb95e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(f\"{folder_res}done_gemprice00_{datetime.datetime.now().strftime('%d-%m-%Y_%H-%M')}.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e68f7e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "280bbdad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2023-11-22 res total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26278fda",
    "metadata": {},
    "source": [
     "## сборка "
@@ -1963,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ade43b62",
+   "id": "1118fe5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3fb7208b",
+   "id": "e3517e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "597efb67",
+   "id": "60fb3963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "92880ca7",
+   "id": "fd21b292",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18e348f",
+   "id": "a7e3d39e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2155,7 +2397,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a4aafc83",
+   "id": "22145d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2203,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54b684d2",
+   "id": "c0d9d6f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2211,7 +2453,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c716b0f1",
+   "id": "e8bcfca9",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "87b63ed4",
+   "id": "5322bb92",
    "metadata": {},
    "outputs": [
     {
@@ -2564,12 +2806,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e21b5305",
+   "cell_type": "markdown",
+   "id": "9b88f38b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Запись в файл"
+   ]
   },
   {
    "cell_type": "code",
@@ -2577,16 +2819,30 @@
    "id": "634475d5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder_res = '../ЦВДК/2023-11-21/'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "27769c51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'folder_res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df\u001b[38;5;241m.\u001b[39mto_excel(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfolder_res\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mdone_gemprice00_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdatetime\u001b[38;5;241m.\u001b[39mdatetime\u001b[38;5;241m.\u001b[39mnow()\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY_\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'folder_res' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df.to_excel(f\"{folder_res}done_em_sap_ruby22{datetime.datetime.now().strftime('%d-%m-%Y_%H-%M')}.xlsx\")"
+    "df.to_excel(f\"{folder_res}done_gemprice00_{datetime.datetime.now().strftime('%d-%m-%Y_%H-%M')}.xlsx\")"
    ]
   },
   {
