--- a/ipynb/gem22.ipynb
+++ b/ipynb/gem22.ipynb
@@ -66,10 +66,12 @@
    "outputs": [],
    "source": [
     "import module_prgem.price_em as price_em\n",
-    "\n",
     "import module_prgem.price_sap_ruby as price_sap_ruby\n",
-    "\n",
-    "import module_prgem.dictgems as mds"
+    "import module_prgem.dictgems as mds\n",
+    "#import importlib\n",
+    "#importlib.reload(price_em)\n",
+    "#importlib.reload(price_sap_ruby)\n",
+    "#importlib.reload(mds)"
    ]
   },
   {
@@ -1300,6 +1302,8 @@
    ],
    "source": [
     "#вызов функции из модуля\n",
+    "#import module_prgem.gemprice as gemprice, importlib.reload(gemprice)\n",
+    "#df_test = df0[['Код','Вставки корректировка']].copy(deep=True)\n",
     "gemprice.gemprice(df_test, 'Вставки корректировка')"
    ]
   },
